@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.7.3\...HEAD[Unreleased]
+
+=== Added
+
+* Add conversion to `i8`, `i16`, `i64`, `i128`, `isize`, `u16`, `u64`, `u128`
+  and `usize` ({pull-request-url}/56[#56])
+
 == {compare-url}/v0.7.2\...v0.7.3[0.7.3] - 2023-10-01
 
 === Changed
